[package]
name = "floodfill-canvas-wasm"
version = "0.1.0"
authors = ["Alex Cabrera <alex.cabrera@gmail.com>"]
description = "Floodfill canvas with wasm"
license = "MIT/Apache-2.0"
repository = "https://github.com/cabreraalex/floodfill-canvas-wasm"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
js-sys = "0.3"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.dev]
opt-level = 0
panic = 'abort'